tests/check/maxnreg_type.co
// RUN: not choreo %target -sa=check %s 2>&1 | FileCheck %s

__co__ void maxnreg_float() {
  [[maxnreg(1.5)]]
  parallel by 1 : block {
  }
}
// CHECK: error: {{\[\[}}maxnreg]] argument must be an integer
